--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,8 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/",
+            "App\\Services\\": "app/Services/",
+            "App\\Http\\Requests\\": "app/Http/Requests/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
         }
